# PyroSys

./: .cursorrules  .gitignore  Jenkinsfile  LICENSE  README.md  environment-full.yml  environment.yml  mkdocs.yml  pyproject.toml
.ci/: autosetup.sh
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  hooks.py  index.md  installation.md
scripts/: install_pyrosys_conda.sh
src/pyrosys/: main.py
src/pyrosys/_infrastructure/training/: trainer.py
src/pyrosys/trainer/: training.py
tests/unit/: main_test.py
